# mingo

./: .bazelignore  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  main_test.go
cmd/mingo/: BUILD.bazel  main.go
database/: crud.sql
internal/app/mingo/: BUILD.bazel  person.go
internal/app/mingo/config/: BUILD.bazel  cli.go  cli_test.go  config.go  config_test.go
internal/app/mingo/database/: BUILD.bazel  fake.go  real.go
internal/app/mingo/errors/: BUILD.bazel  errors.go
internal/app/mingo/httpserver/: BUILD.bazel  server.go
internal/app/mingo/httpserver/handlers/: BUILD.bazel  crud.go  edit.go  health.go  index.go  static.go
internal/app/mingo/httpserver/middleware/: BUILD.bazel  logging.go  middlewares.go  tracing.go
internal/app/mingo/logger/: BUILD.bazel  component.go  component_test.go  logger.go  logger_test.go
internal/app/mingo/orchestrator/: BUILD.bazel  doc.go  lifecycle.go  lifecycle_test.go  orchestrator.go  orchestrator_test.go
internal/app/mingo/system/: BUILD.bazel  clock.go  doc.go  os.go
internal/pkg/stdlibext/: BUILD.bazel  doc.go  math.go  math_test.go
static/: index.html  modal.partial.html
test/: README.md
web/: BUILD.bazel  embed.go
web/static/: crud.html  index.html
