load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mingo_lib",
    srcs = ["main.go"],
    importpath = "github.com/craigjperry2/mingo/cmd/mingo",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/app/mingo/errors",
        "//internal/app/mingo/orchestrator",
    ],
)

go_binary(
    name = "mingo",
    embed = [":mingo_lib"],
    visibility = ["//visibility:public"],
)
