load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = [
        "component.go",
        "doc.go",
        "logger.go",
    ],
    importpath = "github.com/craigjperry2/mingo/internal/app/mingo/logger",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/app/mingo/system"],
)

go_test(
    name = "logger_test",
    srcs = [
        "component_test.go",
        "logger_test.go",
    ],
    embed = [":logger"],
    deps = ["//internal/app/mingo/system"],
)
