load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "system",
    srcs = [
        "clock.go",
        "doc.go",
        "os.go",
    ],
    importpath = "github.com/craigjperry2/mingo/internal/app/mingo/system",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/app/mingo/errors"],
)
